--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 05:54:00 AM</p>
+    <p class="lastupdate">09/07/2020 05:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.8&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.8&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.8&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">53%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.807 inHg (-0.008)</td>
+        <td class="data">29.809 inHg (-0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.4&#176;F</td>
+        <td class="data">80.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="05:52:23 AM">
-            69.8</span>
+          <span title="05:58:23 AM">
+            69.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:52:23 AM" class="loval">
-            69.8</span>
+          <span title="05:58:23 AM" class="loval">
+            69.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:43:49 AM">
-            52</span><br/>
+          <span title="05:56:37 AM">
+            53</span><br/>
           <span title="12:00:01 AM">
             32</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:43:49 AM (Monday)">
-            52</span><br/>
+          <span title="05:56:37 AM (Monday)">
+            53</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.0</span><br/>
-          <span title="05:53:01 AM">
-            80.4</span>
+          <span title="05:56:01 AM">
+            80.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 15 hours, 7 minutes</td>
+      <td class="data">5 days, 15 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 15 hours, 7 minutes</td>
+      <td class="data">5 days, 15 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
