--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 06:44:00 AM</p>
+    <p class="lastupdate">09/07/2020 06:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.808 inHg (-0.007)</td>
+        <td class="data">29.811 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 15 hours, 57 minutes</td>
+      <td class="data">5 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 15 hours, 57 minutes</td>
+      <td class="data">5 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
