--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 09:59:00 AM</p>
+    <p class="lastupdate">09/07/2020 10:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.0&#176;F</td>
+        <td class="data">56.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.810 inHg (0.001)</td>
+        <td class="data">29.811 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.5&#176;F</td>
+        <td class="data">81.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
     </tbody>
   </table>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:56:10 AM">
-            56.3</span><br/>
+          <span title="10:00:48 AM">
+            56.4</span><br/>
           <span title="12:11:05 AM">
             50.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:23:52 AM (Sunday)">
-            56.3</span><br/>
+          <span title="10:00:48 AM (Monday)">
+            56.4</span><br/>
           <span title="04:59:20 PM (Sunday)">
             43.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 19 hours, 12 minutes</td>
+      <td class="data">5 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 19 hours, 12 minutes</td>
+      <td class="data">5 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
