--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 10:04:00 AM</p>
+    <p class="lastupdate">09/07/2020 10:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">40%</td>
+        <td class="data">39%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.811 inHg (0.000)</td>
+        <td class="data">29.809 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.6&#176;F</td>
+        <td class="data">81.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            83.6</span><br/>
+          <span title="10:08:18 AM">
+            83.8</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM" class="hival">
-            83.6</span>
+          <span title="10:08:18 AM" class="hival">
+            83.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:00:48 AM">
-            56.4</span><br/>
+          <span title="10:05:24 AM">
+            56.5</span><br/>
           <span title="12:11:05 AM">
             50.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:00:48 AM (Monday)">
-            56.4</span><br/>
+          <span title="10:05:24 AM (Monday)">
+            56.5</span><br/>
           <span title="04:59:20 PM (Sunday)">
             43.3</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          11
+          13
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 19 hours, 17 minutes</td>
+      <td class="data">5 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 19 hours, 17 minutes</td>
+      <td class="data">5 days, 19 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
